--- a/Locality/Locality/packages.config
+++ b/Locality/Locality/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="Facebook" version="7.0.6" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
@@ -19,6 +20,9 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net46" />
+  <package id="Microsoft.Data.Edm" version="5.6.1" targetFramework="net46" />
+  <package id="Microsoft.Data.OData" version="5.6.1" targetFramework="net46" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.1" targetFramework="net46" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
@@ -31,13 +35,17 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net46" />
   <package id="Modernizr" version="2.6.2" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net46" />
   <package id="SimpleInjector" version="3.1.0" targetFramework="net46" />
   <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.1.0" targetFramework="net46" />
   <package id="SimpleInjector.Integration.Web" version="3.1.0" targetFramework="net46" />
   <package id="SimpleInjector.Integration.WebApi" version="3.1.0" targetFramework="net46" />
+  <package id="System.Spatial" version="5.6.1" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
+  <package id="WindowsAzure.Storage" version="3.1.0.1" targetFramework="net46" />
 </packages>
