--- a/Locality/Locality.Data/Locality.Data.csproj
+++ b/Locality/Locality.Data/Locality.Data.csproj
@@ -97,6 +97,10 @@
     <Compile Include="Migrations\201511150002348_FixUserForFacebookLimitedAccess.Designer.cs">
       <DependentUpon>201511150002348_FixUserForFacebookLimitedAccess.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511150551140_AddedSimplify.cs" />
+    <Compile Include="Migrations\201511150551140_AddedSimplify.Designer.cs">
+      <DependentUpon>201511150551140_AddedSimplify.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRepository.cs" />
@@ -118,6 +122,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511150002348_FixUserForFacebookLimitedAccess.resx">
       <DependentUpon>201511150002348_FixUserForFacebookLimitedAccess.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511150551140_AddedSimplify.resx">
+      <DependentUpon>201511150551140_AddedSimplify.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
