--- a/Locality/Locality/Web.config
+++ b/Locality/Locality/Web.config
@@ -8,6 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="Locality" connectionString="Server=sw8rc21ldu.database.windows.net;Database=Locality;User ID=Plexis;Password=Killomen2010@;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
