--- a/Locality/Locality.Data/Locality.Data.csproj
+++ b/Locality/Locality.Data/Locality.Data.csproj
@@ -109,6 +109,14 @@
     <Compile Include="Migrations\201511150644595_RenamedPreferences.Designer.cs">
       <DependentUpon>201511150644595_RenamedPreferences.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511150902201_SortRelationshipsOut.cs" />
+    <Compile Include="Migrations\201511150902201_SortRelationshipsOut.Designer.cs">
+      <DependentUpon>201511150902201_SortRelationshipsOut.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201511150920285_FixingApiError.cs" />
+    <Compile Include="Migrations\201511150920285_FixingApiError.Designer.cs">
+      <DependentUpon>201511150920285_FixingApiError.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRepository.cs" />
@@ -139,6 +147,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511150644595_RenamedPreferences.resx">
       <DependentUpon>201511150644595_RenamedPreferences.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511150902201_SortRelationshipsOut.resx">
+      <DependentUpon>201511150902201_SortRelationshipsOut.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511150920285_FixingApiError.resx">
+      <DependentUpon>201511150920285_FixingApiError.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
