--- a/Locality/Locality.Data/Locality.Data.csproj
+++ b/Locality/Locality.Data/Locality.Data.csproj
@@ -117,6 +117,14 @@
     <Compile Include="Migrations\201511150920285_FixingApiError.Designer.cs">
       <DependentUpon>201511150920285_FixingApiError.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511151004133_CustomerId onto ticket.cs" />
+    <Compile Include="Migrations\201511151004133_CustomerId onto ticket.Designer.cs">
+      <DependentUpon>201511151004133_CustomerId onto ticket.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201511151156262_AddHasticketToEvent.cs" />
+    <Compile Include="Migrations\201511151156262_AddHasticketToEvent.Designer.cs">
+      <DependentUpon>201511151156262_AddHasticketToEvent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRepository.cs" />
@@ -153,6 +161,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511150920285_FixingApiError.resx">
       <DependentUpon>201511150920285_FixingApiError.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511151004133_CustomerId onto ticket.resx">
+      <DependentUpon>201511151004133_CustomerId onto ticket.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511151156262_AddHasticketToEvent.resx">
+      <DependentUpon>201511151156262_AddHasticketToEvent.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
